--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -27,3 +27,36 @@ iframe {
 a {
     transition: none !important;
 }
+
+.userinfo {
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    font-size: 12px;
+    /* 文本不被选中 */
+    user-select: none;
+}
+
+.layui-side-scroll .userinfo {
+    border-bottom: 1px solid #282B33;
+}
+
+.layui-nav-img {
+    width: 40px;
+    height: 40px;
+}
+
+.text-avater {
+    height: 40px;
+    width: 40px;
+    display: inline-block;
+    background-color: #009688;
+    border-radius: 50%;
+    line-height: 40px;
+    text-align: center;
+    font-size: 20pz;
+    color: #fff;
+    position: relative;
+    top: 4px;
+    margin-right: 10px;
+}
